[gd_scene load_steps=2 format=3 uid="uid://da23m08ml50op"]

[ext_resource type="Script" path="res://ui/options_menu.gd" id="1_6vtbd"]

[node name="OptionsMenu" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -41.0
offset_right = 62.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_6vtbd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2

[node name="Spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Options Menu"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Options" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ConfigureKeybindsButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer/Options"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Configure Keybinds"

[node name="ShowTooltips" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/Options"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/Options/ShowTooltips"]
layout_mode = 2
text = "Show tooltips in game"

[node name="ShowTooltipsToggle" type="CheckButton" parent="VBoxContainer/MarginContainer/VBoxContainer/Options/ShowTooltips"]
unique_name_in_owner = true
layout_mode = 2

[node name="ShowHUD" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/Options"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/Options/ShowHUD"]
layout_mode = 2
text = "Show HUD in game"

[node name="ShowHUDToggle" type="CheckButton" parent="VBoxContainer/MarginContainer/VBoxContainer/Options/ShowHUD"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="VolumeSliders" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/Options"]
layout_mode = 2

[node name="Labels" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/Options/VolumeSliders"]
layout_mode = 2

[node name="Music" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/Options/VolumeSliders/Labels"]
layout_mode = 2
text = "Music Level"

[node name="SFX" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/Options/VolumeSliders/Labels"]
layout_mode = 2
text = "Sound Effects"

[node name="Sliders" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/Options/VolumeSliders"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer/MarginContainer/VBoxContainer/Options/VolumeSliders/Sliders"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
tick_count = 11
ticks_on_borders = true

[node name="SFXVolumeSlider" type="HSlider" parent="VBoxContainer/MarginContainer/VBoxContainer/Options/VolumeSliders/Sliders"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
tick_count = 11
ticks_on_borders = true

[node name="ConfirmButtons" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Apply" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer/ConfirmButtons"]
layout_mode = 2
text = "Apply"

[node name="Cancel" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer/ConfirmButtons"]
layout_mode = 2
text = "Cancel"

[connection signal="toggled" from="VBoxContainer/MarginContainer/VBoxContainer/Options/ShowTooltips/ShowTooltipsToggle" to="." method="_on_showtooltips_toggled"]
[connection signal="toggled" from="VBoxContainer/MarginContainer/VBoxContainer/Options/ShowHUD/ShowHUDToggle" to="." method="_on_showtooltips_toggled"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/ConfirmButtons/Apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/ConfirmButtons/Cancel" to="." method="_on_cancel_pressed"]
